deleting from DB

--- a/5_contact_list_mongodb/views/home.ejs
+++ b/5_contact_list_mongodb/views/home.ejs
@@ -17,7 +17,7 @@
                     </div>
                     <div class="delete-button">
                         <!-- i.id as mondo by default provide an id -->
-                        <a href="/delete-contact/<%= i.id %>">
+                        <a href="/delete-contact/<%= i._id %>">
                             <i class="fas fa-window-close"></i>
                         </a>
                     </div>
